
    Corrected a bug on the code that simplifies the predicate clause
    generated by the compilation of a grammar rule. The code would loop
    when a grammar rule contained a meta-variable, which the Logtalk
    compiler should (but currently don't) report as illegal (the call/1
    control construct should be used instead on this case). Thanks to
    Nicolas Pelletier for the bug report.

    Extended the "delegates" example with a sample implementation of a
    delegator using a parametric object.

    Extended the "dynpred" example in order to illustrate how to define
    category predicates that handle dynamic predicates in the context of
    "this" and in the context of "self".


2.42.2 - January 25, 2011

    Updated the Logtalk compiler in order to allow checking for module
    predicate properties without requiring importing the predicates into
    "user" (note, however, that the module must still be loaded prior to
    the compilation of source files calling the module predicates).

    Updated the Logtalk compiler in order to check compile-time instantiated
    closure arguments on call/2-N goals for common programming errors.

    Updated the Logtalk compiler in order to generate warnings for lambda
    expressions with variables that are not declared as either free variables
    or lambda parameters or with variables that are declared as both free
    variables and lambda parameters. Thanks to Jan Burse for suggesting
    these sanity checks.

    Updated the Logtalk runtime in order to support using the <</2 control
    construct in closure meta-arguments of meta-predicates.

    Added support for compiling Free/Goal lambda expression calls (by
    automatically generating an auxiliary predicate whenever possible).

    Added a compile_aux_clauses/1 public method, based on a predicate with
    the same name in SWI-Prolog, to the built-in object "logtalk". This
    method is usually called from goal_expansion/2 hooks in order to compile